fixed article overflow responsiveness

--- a/src/style.css
+++ b/src/style.css
@@ -108,7 +108,9 @@ body {
     position :relative;
     top:-1px
 }
-
+.leftcolumn div{
+    overflow: hidden;
+}
 #topnav a h2 {
     color: white;
 }
